customer-service/openshift/app-deployment.yaml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "customer-service"
spec:
  template:
    metadata:
      labels:
        name: "customer-service"
    spec:
      containers: # (1)
        - name: "customer-service"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  replicas: 1 # (2)
  triggers: # (3)
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        containerNames:
          - "customer-service"
        from:
          kind: "ImageStreamTag"
          name: "customer-service:latest"
  strategy: # (4)
    type: "Rolling"
  paused: false
  revisionHistoryLimit: 2
