customer-service/openshift/app-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "customer-service"
spec:
  ports:
    - name: "web"
      port: 8080
      targetPort: 8080
  selector:
    name: "customer-service"
