customer-service/openshift/app-route.yaml
apiVersion: "v1"
kind: "Route"
metadata:
  name: "customer-service"
spec:
  path: "/"
  to:
    kind: Service
    name: "customer-service"
